[project]
name = "rt4ksr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kornia>=0.7.4",
    "matplotlib>=3.9.2",
    "numpy<2.0",
    "onnx>=1.17.0",
    "onnxconverter-common>=1.14.0",
    "opencv-python-headless>=4.6.0.66",
    "pillow>=9.2.0",
    "scikit-image>=0.19.4",
    "scipy>=1.14.1",
    "timm>=0.6.12",
    "torch>=2.5.1",
    "torchmetrics>=1.6.0",
    "torchvision>=0.20.1",
    "tqdm>=4.67.0",
    "wandb>=0.18.7",
]
